--- a/client/app/src/main/res/values/colors.xml
+++ b/client/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#B8DBD9</color>
+    <color name="colorPrimaryDark">#586F7C</color>
+    <color name="colorAccent">#04724D</color>
+    <color name="colorPrimary35">#59B8DBD9</color>
+    <color name="white">#F4F4F9</color>
+    <color name="black">#000000</color>
 </resources>
